--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skarman - Political Campaign for Bangladesh</title>
+    <title>SK Arman Hossain - Personal CV & Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>Skarman</h2>
+                <h2>SK Arman</h2>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -23,16 +23,16 @@
                     <a href="#about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#vision" class="nav-link">Vision</a>
+                    <a href="#experience" class="nav-link">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#issues" class="nav-link">Key Issues</a>
+                    <a href="#skills" class="nav-link">Skills</a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a href="donate.html" class="nav-link donate-btn">Donate</a>
+                    <a href="portfolio.html" class="nav-link portfolio-btn">Portfolio</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -47,17 +47,17 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">Building a Better Bangladesh</h1>
-                <p class="hero-subtitle">Together we can create a prosperous, inclusive, and sustainable future for all Bangladeshis</p>
+                <h1 class="hero-title">Hi, I'm SK Arman Hossain</h1>
+                <p class="hero-subtitle">Bridging Policy and Business to Drive Scalable Growth and Sustainable Development</p>
                 <div class="hero-buttons">
                     <a href="#about" class="btn btn-primary">Learn More</a>
-                    <a href="volunteer.html" class="btn btn-secondary">Join Our Campaign</a>
+                    <a href="portfolio.html" class="btn btn-secondary">View Portfolio</a>
                 </div>
             </div>
             <div class="hero-image">
                 <div class="hero-placeholder">
-                    <i class="fas fa-flag"></i>
-                    <span>Bangladesh</span>
+                    <i class="fas fa-user-tie"></i>
+                    <span>Policy Analyst</span>
                 </div>
             </div>
         </div>
@@ -67,114 +67,114 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2>About Skarman</h2>
-                <p>Dedicated to serving the people of Bangladesh with integrity and vision</p>
+                <h2>About Me</h2>
+                <p>Dedicated professional with a passion for policy analysis and sustainable development</p>
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>Our Mission</h3>
-                    <p>I am committed to building a Bangladesh that prioritizes the welfare of its citizens, promotes economic growth, and ensures social justice for all. With years of experience in public service and a deep understanding of our nation's challenges, I am ready to lead with compassion and determination.</p>
+                    <h3>Professional Summary</h3>
+                    <p>I am a Master of Public Policy student at the Willy Brandt School of Public Policy, University of Erfurt, Germany. With a strong background in International and Strategic Studies, I specialize in bridging policy and business to drive scalable growth and sustainable development. My work focuses on human rights, democracy, and socio-political research.</p>
                     
                     <h3>Core Values</h3>
                     <ul class="values-list">
-                        <li><i class="fas fa-heart"></i> <strong>Integrity:</strong> Unwavering commitment to honesty and transparency</li>
-                        <li><i class="fas fa-users"></i> <strong>Inclusivity:</strong> Representing all communities and backgrounds</li>
-                        <li><i class="fas fa-leaf"></i> <strong>Sustainability:</strong> Building a future that protects our environment</li>
-                        <li><i class="fas fa-graduation-cap"></i> <strong>Education:</strong> Investing in our children's future</li>
+                        <li><i class="fas fa-lightbulb"></i> <strong>Innovation:</strong> Developing creative solutions for complex policy challenges</li>
+                        <li><i class="fas fa-handshake"></i> <strong>Integrity:</strong> Building trust through honest and ethical practices</li>
+                        <li><i class="fas fa-users"></i> <strong>Collaboration:</strong> Working effectively with diverse stakeholders</li>
+                        <li><i class="fas fa-chart-line"></i> <strong>Excellence:</strong> Striving for the highest quality in research and analysis</li>
                     </ul>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <h3>15+</h3>
-                        <p>Years of Public Service</p>
+                        <h3>2+</h3>
+                        <p>Years Experience</p>
                     </div>
                     <div class="stat-item">
-                        <h3>50+</h3>
-                        <p>Communities Served</p>
+                        <h3>10+</h3>
+                        <p>Research Projects</p>
                     </div>
                     <div class="stat-item">
-                        <h3>1000+</h3>
-                        <p>Lives Impacted</p>
+                        <h3>3</h3>
+                        <p>Languages</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Vision Section -->
-    <section id="vision" class="vision">
+    <!-- Experience Section -->
+    <section id="experience" class="vision">
         <div class="container">
             <div class="section-header">
-                <h2>Our Vision for Bangladesh</h2>
-                <p>A comprehensive roadmap for national development and prosperity</p>
+                <h2>Professional Experience</h2>
+                <p>A comprehensive overview of my career journey and achievements</p>
             </div>
             <div class="vision-grid">
                 <div class="vision-card">
                     <div class="vision-icon">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-podcast"></i>
                     </div>
-                    <h3>Economic Growth</h3>
-                    <p>Creating jobs, supporting small businesses, and building infrastructure for sustainable economic development.</p>
+                    <h3>Policy Analysis Podcast</h3>
+                    <p>Spearheaded discussions on human rights and democracy, developed analytical reports on social media dynamics, and managed content promotion.</p>
                 </div>
                 <div class="vision-card">
                     <div class="vision-icon">
-                        <i class="fas fa-hospital"></i>
+                        <i class="fas fa-search"></i>
                     </div>
-                    <h3>Healthcare for All</h3>
-                    <p>Ensuring quality healthcare is accessible to every citizen, regardless of their economic status.</p>
+                    <h3>Research Associate</h3>
+                    <p>Conducted in-depth research on socio-political issues, climate change implications, and democratic processes at Global Policy Research.</p>
+                </div>
+                <div class="vision-card">
+                    <div class="vision-icon">
+                        <i class="fas fa-chart-bar"></i>
+                    </div>
+                    <h3>Data Analysis</h3>
+                    <p>Specialized in social media trends analysis, misinformation research, and data visualization for policy insights.</p>
                 </div>
                 <div class="vision-card">
                     <div class="vision-icon">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
-                    <h3>Education Excellence</h3>
-                    <p>Modernizing our education system to prepare students for the challenges of the 21st century.</p>
-                </div>
-                <div class="vision-card">
-                    <div class="vision-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <h3>National Security</h3>
-                    <p>Strengthening our borders and ensuring the safety of all Bangladeshi citizens.</p>
+                    <h3>Academic Excellence</h3>
+                    <p>Currently pursuing Master of Public Policy at University of Erfurt, with background in International and Strategic Studies.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Key Issues Section -->
-    <section id="issues" class="issues">
+    <!-- Skills Section -->
+    <section id="skills" class="issues">
         <div class="container">
             <div class="section-header">
-                <h2>Key Issues We're Addressing</h2>
-                <p>Understanding the challenges and implementing real solutions</p>
+                <h2>Skills & Expertise</h2>
+                <p>Technical and professional skills that drive success</p>
             </div>
             <div class="issues-content">
                 <div class="issue-item">
                     <div class="issue-number">01</div>
                     <div class="issue-content">
-                        <h3>Climate Change & Environmental Protection</h3>
-                        <p>Bangladesh faces significant climate challenges. We need comprehensive policies to protect our environment and build resilience against natural disasters.</p>
+                        <h3>Policy Analysis & Research</h3>
+                        <p>Expert in conducting in-depth research on socio-political issues, climate change implications, and democratic processes with strong analytical capabilities.</p>
                     </div>
                 </div>
                 <div class="issue-item">
                     <div class="issue-number">02</div>
                     <div class="issue-content">
-                        <h3>Youth Employment & Skills Development</h3>
-                        <p>Our young population is our greatest asset. We must create opportunities and provide the skills needed for the modern workforce.</p>
+                        <h3>Digital Content Creation</h3>
+                        <p>Proficient in podcast production, social media management, content promotion, and digital marketing strategies for policy engagement.</p>
                     </div>
                 </div>
                 <div class="issue-item">
                     <div class="issue-number">03</div>
                     <div class="issue-content">
-                        <h3>Rural Development & Agriculture</h3>
-                        <p>Supporting our farmers and rural communities is essential for national food security and balanced regional development.</p>
+                        <h3>Data Analysis & Visualization</h3>
+                        <p>Skilled in data processing, analysis, visualization, and social media data gathering for research and policy insights.</p>
                     </div>
                 </div>
                 <div class="issue-item">
                     <div class="issue-number">04</div>
                     <div class="issue-content">
-                        <h3>Digital Transformation</h3>
-                        <p>Embracing technology to improve government services, education, and business opportunities across Bangladesh.</p>
+                        <h3>Project Management</h3>
+                        <p>Experienced in managing research projects, implementing campaigns, and coordinating multi-stakeholder initiatives for sustainable development.</p>
                     </div>
                 </div>
             </div>
@@ -185,12 +185,12 @@
     <section class="cta">
         <div class="container">
             <div class="cta-content">
-                <h2>Join Our Movement</h2>
-                <p>Together, we can build the Bangladesh we all deserve. Your support matters.</p>
+                <h2>Let's Work Together</h2>
+                <p>Ready to discuss how I can contribute to your organization's success? Let's connect.</p>
                 <div class="cta-buttons">
-                    <a href="volunteer.html" class="btn btn-primary">Volunteer</a>
-                    <a href="donate.html" class="btn btn-secondary">Donate</a>
-                    <a href="#contact" class="btn btn-outline">Get in Touch</a>
+                    <a href="portfolio.html" class="btn btn-primary">View Portfolio</a>
+                    <a href="#contact" class="btn btn-secondary">Get in Touch</a>
+                    <a href="resume.html" class="btn btn-outline">Download CV</a>
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Get in Touch</h2>
-                <p>We want to hear from you. Share your thoughts, concerns, and ideas.</p>
+                <p>I'm always interested in new opportunities and professional connections.</p>
             </div>
             <div class="contact-content">
                 <div class="contact-info">
@@ -209,21 +209,35 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@skarman.bd</p>
+                            <p>skarmanumir2015@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Phone</h4>
-                            <p>+880 1234-567890</p>
+                            <p>(+49) 1772416443</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
-                            <h4>Office</h4>
-                            <p>Dhaka, Bangladesh</p>
+                            <h4>Location</h4>
+                            <p>Nordhauser Str. 79, 99089, Erfurt, Germany</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-linkedin"></i>
+                        <div>
+                            <h4>LinkedIn</h4>
+                            <p>linkedin.com/in/sk-arman-hossain-96b47a154</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-youtube"></i>
+                        <div>
+                            <h4>YouTube</h4>
+                            <p>@ogtalkspodcast</p>
                         </div>
                     </div>
                 </div>
@@ -251,36 +265,36 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Skarman</h3>
-                    <p>Building a better Bangladesh for all citizens.</p>
+                    <h3>SK Arman Hossain</h3>
+                    <p>Bridging Policy and Business to Drive Scalable Growth and Sustainable Development.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/sk-arman-hossain-96b47a154/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.youtube.com/@ogtalkspodcast/videos"><i class="fab fa-youtube"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#vision">Vision</a></li>
-                        <li><a href="#issues">Issues</a></li>
-                        <li><a href="volunteer.html">Volunteer</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Get Involved</h4>
+                    <h4>Services</h4>
                     <ul>
-                        <li><a href="volunteer.html">Volunteer</a></li>
-                        <li><a href="donate.html">Donate</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="resume.html">Resume</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="events.html">Events</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h4>Newsletter</h4>
-                    <p>Stay updated with our campaign progress.</p>
+                    <p>Stay updated with my latest work and insights.</p>
                     <form class="newsletter-form">
                         <input type="email" placeholder="Your email">
                         <button type="submit">Subscribe</button>
@@ -288,7 +302,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Skarman Campaign. All rights reserved.</p>
+                <p>&copy; 2024 SK Arman Hossain. All rights reserved.</p>
             </div>
         </div>
     </footer>
