--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="hero-placeholder">
-                    <i class="fas fa-user-tie"></i>
-                    <span>Policy Analyst</span>
-                </div>
+                <img src="images/skarman.jpg" alt="SK Arman Hossain" class="hero-photo">
             </div>
         </div>
     </section>
@@ -112,6 +109,7 @@
                 <div class="vision-card">
                     <div class="vision-icon">
                         <i class="fas fa-podcast"></i>
+                        <img src="images/logos/ogtalks.png" alt="OG Talks Podcast" class="org-logo-small" onload="this.previousElementSibling && (this.previousElementSibling.style.display='none')" onerror="this.style.display='none'">
                     </div>
                     <h3>Policy Analysis Podcast</h3>
                     <p>Spearheaded discussions on human rights and democracy, developed analytical reports on social media dynamics, and managed content promotion.</p>
@@ -136,6 +134,38 @@
                     </div>
                     <h3>Academic Excellence</h3>
                     <p>Currently pursuing Master of Public Policy at University of Erfurt, with background in International and Strategic Studies.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Affiliations & Institutions -->
+    <section class="affiliations">
+        <div class="container">
+            <div class="section-header">
+                <h2>Affiliations & Institutions</h2>
+                <p>Organizations and institutions I've worked with.</p>
+            </div>
+            <div class="logo-grid">
+                <a href="https://www.youtube.com/@ogtalkspodcast/videos" class="logo-item" target="_blank" rel="noopener">
+                    <img src="images/logos/ogtalks.png" alt="OG Talks Podcast" onload="this.nextElementSibling && (this.nextElementSibling.style.display='none')" onerror="this.style.display='none'">
+                    <i class="fas fa-podcast logo-fallback" aria-hidden="true"></i>
+                    <span class="logo-caption">OG Talks Podcast</span>
+                </a>
+                <a href="https://www.uni-erfurt.de/en/brandtschool" class="logo-item" target="_blank" rel="noopener">
+                    <img src="images/logos/uni-erfurt.png" alt="University of Erfurt" onload="this.nextElementSibling && (this.nextElementSibling.style.display='none')" onerror="this.style.display='none'">
+                    <i class="fas fa-university logo-fallback" aria-hidden="true"></i>
+                    <span class="logo-caption">University of Erfurt</span>
+                </a>
+                <div class="logo-item">
+                    <img src="images/logos/gpr.png" alt="Global Policy Research" onload="this.nextElementSibling && (this.nextElementSibling.style.display='none')" onerror="this.style.display='none'">
+                    <i class="fas fa-building logo-fallback" aria-hidden="true"></i>
+                    <span class="logo-caption">Global Policy Research</span>
+                </div>
+                <div class="logo-item">
+                    <img src="images/logos/ndm.png" alt="National Democratic Movement" onload="this.nextElementSibling && (this.nextElementSibling.style.display='none')" onerror="this.style.display='none'">
+                    <i class="fas fa-flag logo-fallback" aria-hidden="true"></i>
+                    <span class="logo-caption">NDM Bangladesh</span>
                 </div>
             </div>
         </div>
